src/styles.scss
/* Imports */

@import 'assets/css/variables';
@import 'assets/css/fonts';

/* Global styles */

body {
    margin: 0px;
    font-family: "Tomica", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
    color: $black;
    cursor: default;
    overflow: overlay;
    overflow-x: hidden;
}

::-webkit-scrollbar {
    width: 20px;
}

::-webkit-scrollbar-track {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background-color: $grey-semi-light;
    border-radius: 20px;
    border: 6px solid transparent;
    background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
    background-color: $grey;
}

*::selection {
    background: $blue;
    color: $white;
}

.main {
    padding-top: 180px;

    @media (max-width: 575px) {
        padding-top: 220px;
        padding-bottom: 80px;
    }
}

.container {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
    box-sizing: border-box;

    @media (min-width: 576px) {
        max-width: 540px;
    }

    @media (min-width: 768px) {
        max-width: 720px;
    }

    @media (min-width: 992px) {
        max-width: 960px;
    }

    @media (min-width: 1200px) {
        max-width: 1140px;
    }
}

.row {
    display: flex;
    flex-wrap: wrap;
    margin-right: -10px;
    margin-left: -10px;

    @media (max-width: 767px) {
        flex-direction: column;
    }
}

.col {
    position: relative;
    width: 100%;
    max-width: 100%;
    box-sizing: border-box;
    flex-basis: 0;
    flex-grow: 1;
    padding-right: 10px;
    padding-left: 10px;

    &.no-grow {
        flex-grow: 0;
    }

    &.group-col {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
    }

    &.group-row {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        align-items: center;
    }
}

.card {
    display: block;
    padding: 25px;
    background-color: $grey-light;
    border-radius: 10px;
}

.icon-line {
    display: flex;
    justify-content: flex-start;
    align-items: center;

    i {
        margin-right: 5px;
    }

    &.card {
        font-size: 16px;

        i {
            margin-right: 12px;
            font-size: 25px;
        }
    }

    @media (max-width: 575px) {
        justify-content: center;
        text-align: center;
    }
}

img {
    user-select: none;
}

ul {
    padding: 0px;
    list-style: none;
}

.row-buttons {
    .col {
        .btn {
            width: 100%;
        }
    }
}

h2 {
    margin: 40px 0px 20px;
    font-size: 30px;

    .icon svg {
        height: 60px;
        margin-right: 12px;
        fill: currentColor;
    }

    @media (max-width: 575px) {
        margin-bottom: 10px;
        text-align: center;
    }
}

a {
    text-decoration: none;
    color: inherit;

    &:focus {
        outline: 0;
    }
}

.btn {
    display: inline-block;
    margin: 10px 0px;
    padding: 20px 45px;
    box-sizing: border-box;
    border-radius: 10px;
    font-size: 16px;
    line-height: 16px;
    background: $blue;
    color: $white;
    transition: all 0.2s;
    user-select: none;

    i {
        margin-right: 8px;
        line-height: 16px;
    }

    &.blue {
        background: $blue;

        &:hover,
        &:focus {
            background: darken($blue, 10);
        }
    }

    &.green {
        background: $green;

        &:hover,
        &:focus {
            background: darken($green, 10);
        }
    }

    &.red {
        background: $red;

        &:hover,
        &:focus {
            background: darken($red, 10);
        }
    }

    &.purple {
        background: $purple;

        &:hover,
        &:focus {
            background: darken($purple, 10);
        }
    }

    &.messenger {
        background: linear-gradient(90deg, #0a7cff, #a10eeb, #ff5297, #ff6c5c);

        &:hover,
        &:focus {
            background: linear-gradient(90deg, darken(#0a7cff, 10), darken(#a10eeb, 10), darken(#ff5297, 10), darken(#ff6c5c, 10));
        }
    }

    &:hover,
    &:focus {
        background: darken($blue, 10);
        filter: drop-shadow(0px 0px 5px $black-transparent);
    }

    &.w-100 {
        display: block;
        width: 100%;
    }

    &.white {
        background: none;
        background-color: $white;
        color: $black;

        &:hover,
        &:focus {
            background: none;
            background-color: transparent;
            border-color: $white;
            color: $white;
        }
    }

    &.rounded {
        position: relative;
        padding: 14px 20px;
        border-radius: 50px;
        overflow: hidden;

        &.white {
            border-width: 0px;
            color: $white;
            background-color: rgba($white, 0.2);
            z-index: 1;

            &::after {
                content: "";
                position: absolute;
                top: calc(50% - 5px);
                left: calc(50% - 5px);
                display: block;
                width: 10px;
                height: 10px;
                border-radius: 50%;
                background-color: $white;
                transition: all 0.2s;
                opacity: 0;
                z-index: -1;
            }
        }

        &.white:hover,
        &.white:focus {
            color: $black;

            &::after {
                top: calc(50% - 100px);
                left: 0px;
                width: 100%;
                height: 200px;
                opacity: 1;
            }
        }
    }

    &:not([href]) {
        cursor: not-allowed;
    }
}

.description {
    font-size: 16px;
    line-height: 26px;
}

iframe {
    width: 100%;
    height: calc(100vh - 180px);
    border: none;

    @media (max-width: 575px) {
        width: calc(100% - 40px);
        height: calc(100vh - 340px);
        margin: 20px;
        border-radius: 10px;
        background-color: $grey-light;
        overflow: hidden;
    }
}

.ai-center {
    align-items: center;
}

.jc-center {
    justify-content: center;
}

/* Dark theme */

@media (prefers-color-scheme: dark) {
    body {
        background: $deep-black;
        color: $white;
    }

    ::-webkit-scrollbar-thumb {
        background-color: $grey;
    }

    ::-webkit-scrollbar-thumb:hover {
        background-color: $grey-semi-light;
    }

    .card {
        background-color: $black;
    }

    .btn {

        &:hover,
        &:focus {
            filter: drop-shadow(0px 0px 5px $white-transparent);
        }
    }

    iframe {
        @media (max-width: 575px) {
            background-color: $black;
        }
    }
}

